Perkin-UAT/force-app/main/default/objects/SVMX_PS_Service_Alert__c/SVMX_PS_Service_Alert__c.object-meta.xml
<CustomObject>
    <label>Service Alert</label>
    <nameField>
        <displayFormat>SA-{0000000}</displayFormat>
        <label>Service Alert Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Alerts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>