Perkin-UAT/force-app/main/default/objects/SVMX_PS_Service_Alert__c/fields/BD_Created_Date_Reporting__c.field-meta.xml
<CustomField>
    <fullName>BD_Created_Date_Reporting__c</fullName>
    <description>Displays the Legacy Created Date if populated, otherwise displays the Created Date.</description>
    <formula>IF(
ISBLANK(Legacy_Created_Date__c),
CreatedDate,
Legacy_Created_Date__c
)</formula>
    <inlineHelpText>Displays the Legacy Created Date if populated, otherwise displays the Created Date.</inlineHelpText>
    <label>Created Date (Reporting)</label>
    <type>Date</type>
</CustomField>