Perkin-UAT/force-app/main/default/objects/SVMX_PS_Service_Alert__c/fields/BD_Escalation_Reason__c.field-meta.xml
<CustomField>
    <fullName>BD_Escalation_Reason__c</fullName>
    <label>Escalation Reason</label>
    <type>TextArea</type>
</CustomField>