Perkin-UAT/force-app/main/default/objects/SVMX_PS_Service_Alert__c/fields/BD_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>BD_Owner_Name__c</fullName>
    <formula>IF(NOT(ISBLANK(Owner:Queue.Id)), Owner:Queue.QueueName, Owner:User.fxFullName__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Name</label>
    <type>Text</type>
</CustomField>