Perkin-UAT/force-app/main/default/objects/SVMX_PS_Service_Alert__c/fields/BD_Technician_Email__c.field-meta.xml
<CustomField>
    <fullName>BD_Technician_Email__c</fullName>
    <formula>SVMX_PS_Technician__r.SVMXC__Email__c</formula>
    <label>Technician Email</label>
    <type>Text</type>
</CustomField>