Perkin-UAT/force-app/main/default/objects/SVMX_PS_Service_Alert__c/fields/Legacy_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Record_Id__c</fullName>
    <description>The record Id from the legacy ServiceMax org.</description>
    <externalId>true</externalId>
    <label>Legacy Record Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>