Perkin-UAT/force-app/main/default/objects/SVMX_PS_Service_Alert__c/fields/Region_new__c.field-meta.xml
<CustomField>
    <fullName>Region_new__c</fullName>
    <formula>SVMX_PS_Account__r.PKI_Global_Region__c</formula>
    <label>Region</label>
    <type>Text</type>
</CustomField>