Perkin-UAT/force-app/main/default/objects/SVMX_PS_Service_Alert__c/fields/SMAX_PS_Cancel_Reason__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Cancel_Reason__c</fullName>
    <description>ITSVMX-1507 Used to reject requests by Technical Support queue</description>
    <label>Cancel Reason</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>