Perkin-UAT/force-app/main/default/objects/SVMX_PS_Service_Alert__c/fields/SMAX_PS_CatalogProfile__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_CatalogProfile__c</fullName>
    <description>Catalog Profile</description>
    <formula>SVMX_PS_Installed_Product__r.SMAX_PS_CatalogProfile__c</formula>
    <inlineHelpText>Catalog Profile</inlineHelpText>
    <label>Catalog Profile</label>
    <type>Text</type>
</CustomField>