Perkin-UAT/force-app/main/default/objects/SVMX_PS_Service_Alert__c/fields/SMAX_PS_Initial_Response_Email__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Initial_Response_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ITSVMX-1507 Used to trigger an email response from Tech Support to the creator of the Tech Support Service Alert</description>
    <label>Initial Response Email</label>
    <type>Checkbox</type>
</CustomField>