Perkin-UAT/force-app/main/default/objects/SVMX_PS_Service_Alert__c/fields/SMAX_PS_Is_Escalated__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Is_Escalated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ITSVMX-1507 Used to escalate requests to Technical Support queue</description>
    <label>Is Escalated</label>
    <type>Checkbox</type>
</CustomField>