Perkin-UAT/force-app/main/default/objects/SVMX_PS_Service_Alert__c/fields/SMAX_PS_Owned_By_Company_Decided_By__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Owned_By_Company_Decided_By__c</fullName>
    <description>Decision made by engine to decide Owned By Company value after being processed by Mapping Engine</description>
    <label>Owned By Company Decided By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>