Perkin-UAT/force-app/main/default/objects/SVMX_PS_Service_Alert__c/fields/SMAX_PS_Technical_Support_Response__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Technical_Support_Response__c</fullName>
    <description>ITSVMX-1507 Used by Tech Support to provide an initial response to requestor</description>
    <label>Technical Support Response</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>