Perkin-UAT/force-app/main/default/objects/SVMX_PS_Service_Alert__c/fields/SMAX_PS_Total_Lines__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Total_Lines__c</fullName>
    <label>Total Lines</label>
    <summaryForeignKey>SMAX_PS_Service_Alert_Line__c.SMAX_PS_Service_Alert__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>