Perkin-UAT/force-app/main/default/objects/SVMX_PS_Service_Alert__c/fields/SVMX_PS_Account__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Alerts</relationshipLabel>
    <relationshipName>Service_Alerts</relationshipName>
    <type>Lookup</type>
</CustomField>