Perkin-UAT/force-app/main/default/objects/SVMX_PS_Service_Alert__c/fields/SVMX_PS_BU_Reviewed_with_Quality_Dept__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_BU_Reviewed_with_Quality_Dept__c</fullName>
    <label>BU Reviewed with Quality Dept</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>