Perkin-UAT/force-app/main/default/objects/SVMX_PS_Service_Alert__c/fields/SVMX_PS_Carrier_Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_Carrier_Tracking_Number__c</fullName>
    <label>Carrier/Tracking Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>