Perkin-UAT/force-app/main/default/objects/SVMX_PS_Service_Alert__c/fields/SVMX_PS_Commentsto_CRC__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_Commentsto_CRC__c</fullName>
    <description>Comments to customer care</description>
    <inlineHelpText>Please put all necessary information to help expedite the replacement process, i.e. if full instrument or part of system replacement is requested; specific conditions on site; new contact person on customer side; etc</inlineHelpText>
    <label>Comments to Customer Care</label>
    <type>TextArea</type>
</CustomField>