Perkin-UAT/force-app/main/default/objects/SVMX_PS_Service_Alert__c/fields/SVMX_PS_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_Contact_Email__c</fullName>
    <label>Contact Email</label>
    <type>Email</type>
</CustomField>