Perkin-UAT/force-app/main/default/objects/SVMX_PS_Service_Alert__c/fields/SVMX_PS_Country_Manager__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_Country_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>For a complete list of Service Alert Service Leaders, select Custom Links &gt; Service Alert Specialists and Service Leaders below.</inlineHelpText>
    <label>Service Leader</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Alerts2</relationshipName>
    <type>Lookup</type>
</CustomField>