Perkin-UAT/force-app/main/default/objects/SVMX_PS_Service_Alert__c/fields/SVMX_PS_Days_on_Alert__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_Days_on_Alert__c</fullName>
    <formula>IF( 
  ISBLANK(Legacy_Created_Date__c),
  IF(
    NOT( ISBLANK(SVMX_PS_Date_Closed__c) ), 
    SVMX_PS_Date_Closed__c - DATEVALUE(CreatedDate),
    TODAY() - DATEVALUE(CreatedDate)
  ),
    IF(
    NOT( ISBLANK(SVMX_PS_Date_Closed__c) ), 
    SVMX_PS_Date_Closed__c - DATEVALUE(Legacy_Created_Date__c),
    TODAY() - DATEVALUE(Legacy_Created_Date__c)
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days on Alert</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>