Perkin-UAT/force-app/main/default/objects/SVMX_PS_Service_Alert__c/fields/SVMX_PS_Detailed_Current_Action__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_Detailed_Current_Action__c</fullName>
    <description>Label changed on 3/3/2025 per ITSVMX-1507</description>
    <label>Action Taken</label>
    <type>TextArea</type>
</CustomField>