Perkin-UAT/force-app/main/default/objects/SVMX_PS_Service_Alert__c/fields/SVMX_PS_Download_to_Mobile_Mgr__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_Download_to_Mobile_Mgr__c</fullName>
    <formula>IF($User.fxFullName__c  = SVMX_PS_Technician__r.SVMX_PS_Technician_Manager__c ,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Download to Mobile - Mgr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>