Perkin-UAT/force-app/main/default/objects/SVMX_PS_Service_Alert__c/fields/SVMX_PS_F1_Complaint_Number__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_F1_Complaint_Number__c</fullName>
    <label>F1 Complaint Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>