Perkin-UAT/force-app/main/default/objects/SVMX_PS_Service_Alert__c/fields/SVMX_PS_Final_Resolution_Summary__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_Final_Resolution_Summary__c</fullName>
    <label>Final Resolution Summary</label>
    <type>TextArea</type>
</CustomField>