Perkin-UAT/force-app/main/default/objects/SVMX_PS_Service_Alert__c/fields/SVMX_PS_Initial_Problem_Description__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_Initial_Problem_Description__c</fullName>
    <description>Label changed on 3/3/2025 per ITSVMX-1507</description>
    <label>Problem Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>