Perkin-UAT/force-app/main/default/objects/SVMX_PS_Service_Alert__c/fields/SVMX_PS_Last_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_Last_Approved_By__c</fullName>
    <description>Last Person to Approve this Service Alert</description>
    <label>Last Approved By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>