Perkin-UAT/force-app/main/default/objects/SVMX_PS_Service_Alert__c/fields/SVMX_PS_Location__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>SVMXC__Site__c</referenceTo>
    <relationshipLabel>Service Alerts</relationshipLabel>
    <relationshipName>Service_Alerts</relationshipName>
    <type>Lookup</type>
</CustomField>