Perkin-UAT/force-app/main/default/objects/SVMX_PS_Service_Alert__c/fields/SVMX_PS_Manager_Approval_User__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_Manager_Approval_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager Approval User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Alerts3</relationshipName>
    <type>Lookup</type>
</CustomField>