Perkin-UAT/force-app/main/default/objects/SVMX_PS_Service_Alert__c/fields/SVMX_PS_Manufacturing_Site__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_Manufacturing_Site__c</fullName>
    <label>Manufacturing Site</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hamburg</fullName>
            </value>
            <value>
                <fullName>Hopkinton</fullName>
            </value>
            <value>
                <fullName>Llantrisant</fullName>
            </value>
            <value>
                <fullName>Shelton</fullName>
            </value>
            <value>
                <fullName>Singapore</fullName>
            </value>
            <value>
                <fullName>Turku</fullName>
            </value>
            <value>
                <fullName>Bolton</fullName>
            </value>
            <value>
                <fullName>Taicang</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>