Perkin-UAT/force-app/main/default/objects/SVMX_PS_Service_Alert__c/fields/SVMX_PS_Parent_Service_Alert__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_Parent_Service_Alert__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Service Alert</label>
    <referenceTo>SVMX_PS_Service_Alert__c</referenceTo>
    <relationshipLabel>Child Service Alerts</relationshipLabel>
    <relationshipName>Child_Service_Alerts</relationshipName>
    <type>Lookup</type>
</CustomField>