Perkin-UAT/force-app/main/default/objects/SVMX_PS_Service_Alert__c/fields/SVMX_PS_Part_Number_Description__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_Part_Number_Description__c</fullName>
    <formula>SVMX_PS_Defective_Part__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Part Number Description</label>
    <type>Text</type>
</CustomField>