Perkin-UAT/force-app/main/default/objects/SVMX_PS_Service_Alert__c/fields/SVMX_PS_Payer_Account__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_Payer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Alerts (Payer Account)</relationshipLabel>
    <relationshipName>Service_Alerts2</relationshipName>
    <type>Lookup</type>
</CustomField>