Perkin-UAT/force-app/main/default/objects/SVMX_PS_Service_Alert__c/fields/SVMX_PS_Product__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_Product__c</fullName>
    <formula>SVMX_PS_Installed_Product__r.SVMXC__Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product</label>
    <type>Text</type>
</CustomField>