Perkin-UAT/force-app/main/default/objects/SVMX_PS_Service_Alert__c/fields/SVMX_PS_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_Product_Line__c</fullName>
    <formula>SVMX_PS_Installed_Product__r.SVMXC__Product__r.product_line__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Line</label>
    <type>Text</type>
</CustomField>