Perkin-UAT/force-app/main/default/objects/SVMX_PS_Service_Alert__c/fields/SVMX_PS_Quality_Approval_Reason__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_Quality_Approval_Reason__c</fullName>
    <label>Business Unit Approval Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unable to be repaired in the Field</fullName>
            </value>
            <value>
                <fullName>Too many service calls on unit</fullName>
            </value>
            <value>
                <fullName>Instrument damaged</fullName>
            </value>
            <value>
                <fullName>Does not meet instrument performance specifications</fullName>
            </value>
            <value>
                <fullName>Can’t perform customer’s application</fullName>
            </value>
            <value>
                <fullName>Customer not satisfied and wants replacement</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>