Perkin-UAT/force-app/main/default/objects/SVMX_PS_Service_Alert__c/fields/SVMX_PS_Quality_Comments__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_Quality_Comments__c</fullName>
    <label>Quality Comments</label>
    <type>TextArea</type>
</CustomField>