Perkin-UAT/force-app/main/default/objects/SVMX_PS_Service_Alert__c/fields/SVMX_PS_Region__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_Region__c</fullName>
    <label>Region_deprecated</label>
    <length>50</length>
    <type>Text</type>
</CustomField>