Perkin-UAT/force-app/main/default/objects/SVMX_PS_Service_Alert__c/fields/SVMX_PS_Region_User__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_Region_User__c</fullName>
    <formula>IF(TEXT($User.Region__c) == SVMX_PS_Region__c,&quot;true&quot;,&quot;false&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region User</label>
    <type>Text</type>
</CustomField>