Perkin-UAT/force-app/main/default/objects/SVMX_PS_Service_Alert__c/fields/SVMX_PS_Replacement_Product__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_Replacement_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Replacement Product</label>
    <referenceTo>SVMXC__Installed_Product__c</referenceTo>
    <relationshipLabel>Service Alerts (Replacement Product)</relationshipLabel>
    <relationshipName>Service_Alerts1</relationshipName>
    <type>Lookup</type>
</CustomField>