Perkin-UAT/force-app/main/default/objects/SVMX_PS_Service_Alert__c/fields/SVMX_PS_SAP_Replacement_Sales_Order_Num__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_SAP_Replacement_Sales_Order_Num__c</fullName>
    <label>SAP Replacement Sales Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>