Perkin-UAT/force-app/main/default/objects/SVMX_PS_Service_Alert__c/fields/SVMX_PS_SAP_Service_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_SAP_Service_Order_Number__c</fullName>
    <inlineHelpText>Also referred to as the SAP RMA Number</inlineHelpText>
    <label>SAP Return Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>