Perkin-UAT/force-app/main/default/objects/SVMX_PS_Service_Alert__c/fields/SVMX_PS_Ship_To_Account__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_Ship_To_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Alerts (Ship To Account)</relationshipLabel>
    <relationshipName>Service_Alerts1</relationshipName>
    <type>Lookup</type>
</CustomField>