Perkin-UAT/force-app/main/default/objects/SVMX_PS_Service_Alert__c/fields/SVMX_PS_Status__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BU Investigating</fullName>
            </value>
            <value>
                <fullName>Quality Approved</fullName>
                <label>Business Unit Approved</label>
            </value>
            <value>
                <fullName>Quality Rejected</fullName>
                <label>Business Unit Rejected</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Confidence Testing</fullName>
            </value>
            <value>
                <fullName>Engineering Investigating</fullName>
            </value>
            <value>
                <fullName>Field Service Investigating</fullName>
            </value>
            <value>
                <fullName>Implementation Specialist Investigating</fullName>
            </value>
            <value>
                <fullName>Manager Approved</fullName>
            </value>
            <value>
                <fullName>Manager Rejected</fullName>
            </value>
            <value>
                <fullName>New instrument ordered</fullName>
            </value>
            <value>
                <fullName>New instrument shipped</fullName>
            </value>
            <value>
                <fullName>No Activity</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Parts Shipped</fullName>
            </value>
            <value>
                <fullName>Pending Manager Approval</fullName>
            </value>
            <value>
                <fullName>Product Specialist Investigating</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Replacement Completed</fullName>
            </value>
            <value>
                <fullName>Replacement Requested</fullName>
            </value>
            <value>
                <fullName>Request Canceled</fullName>
            </value>
            <value>
                <fullName>Sent to CRC</fullName>
            </value>
            <value>
                <fullName>Shipping Damage</fullName>
            </value>
            <value>
                <fullName>Software Investigating</fullName>
            </value>
            <value>
                <fullName>Support Investigating</fullName>
            </value>
            <value>
                <fullName>Waiting on Parts/Materials</fullName>
            </value>
            <value>
                <fullName>Waiting on Supplier Direct Delivered Part</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>