Perkin-UAT/force-app/main/default/objects/SVMX_PS_Service_Alert__c/fields/SVMX_PS_Sub_Region__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_Sub_Region__c</fullName>
    <label>Sub-Region</label>
    <length>50</length>
    <type>Text</type>
</CustomField>