Perkin-UAT/force-app/main/default/objects/SVMX_PS_Service_Alert__c/fields/SVMX_PS_Submitter_Comments__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_Submitter_Comments__c</fullName>
    <label>Submitter Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>