Perkin-UAT/force-app/main/default/objects/SVMX_PS_Service_Alert__c/fields/SVMX_PS_Technician__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technician</label>
    <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
    <relationshipLabel>Service Alerts</relationshipLabel>
    <relationshipName>Service_Alerts</relationshipName>
    <type>Lookup</type>
</CustomField>