Perkin-UAT/force-app/main/default/objects/SVMX_PS_Service_Alert__c/fields/SVMX_PS_Type_of_Problem__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_Type_of_Problem__c</fullName>
    <label>Type of Problem</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Instrument</fullName>
            </value>
            <value>
                <fullName>PerkinElmer Accessory</fullName>
            </value>
            <value>
                <fullName>Other Supplier Accessory</fullName>
            </value>
            <value>
                <fullName>Computer</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Accessory</fullName>
            </value>
            <value>
                <fullName>PC</fullName>
            </value>
            <value>
                <fullName>Part</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>