Perkin-UAT/force-app/main/default/objects/SVMX_PS_Service_Alert__c/fields/SVMX_PS_Zip__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_Zip__c</fullName>
    <label>Zip</label>
    <length>100</length>
    <type>Text</type>
</CustomField>