Perkin-UAT/force-app/main/default/objects/SVMX_PS_Service_Alert__c/recordTypes/General_Alert.recordType-meta.xml
<RecordType>
    <fullName>General_Alert</fullName>
    <active>true</active>
    <label>Parts Availability Alert</label>
</RecordType>