Perkin-UAT/force-app/main/default/objects/SVMX_PS_Service_Alert__c/recordTypes/Replacement_Alert.recordType-meta.xml
<RecordType>
    <fullName>Replacement_Alert</fullName>
    <active>true</active>
    <label>Replacement Alert</label>
</RecordType>