Perkin-UAT/force-app/main/default/objects/SVMX_PS_Service_Alert__c/recordTypes/Technical_Support_Request.recordType-meta.xml
<RecordType>
    <fullName>Technical_Support_Request</fullName>
    <active>true</active>
    <label>Technical Support Request</label>
</RecordType>